--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@types/react-native-vector-icons": "^6.4.13",
     "react": "18.2.0",
     "react-native": "0.71.10",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -23,6 +24,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-video": "^5.0.19",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
