--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@types/react-native-vector-icons": "^6.4.13",
     "react": "18.2.0",
     "react-native": "0.71.10",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1"
   },
