--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-common-types": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react-native-vector-icons": "^6.4.13",
