--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react-native-vector-icons": "^6.4.13",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-native": "0.71.10",
+    "react-native-image-picker": "^7.1.2",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-svg-transformer": "^1.3.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1"
   },
