--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.3.0",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-video": "^5.2.1"
+    "react-native-video": "^5.2.1",
+    "uri-scheme": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
