--- a/package.json
+++ b/package.json
@@ -10,23 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/react-native": "^1.0.28",
+    "@aws-amplify/rtn-web-browser": "^1.0.28",
+    "@aws-amplify/ui-react-native": "^2.1.5",
     "@fortawesome/fontawesome-common-types": "^6.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react-native-vector-icons": "^6.4.13",
+    "amazon-cognito-identity-js": "^6.3.13",
+    "aws-amplify": "^5.3.18",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.71.10",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.2",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-pager-view": "^6.3.1",
+    "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
     "uri-scheme": "^1.2.0"
