--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/netinfo": "^11.3.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
@@ -27,12 +28,14 @@
     "@types/react-native-vector-icons": "^6.4.13",
     "amazon-cognito-identity-js": "^6.3.13",
     "aws-amplify": "^5.3.18",
+    "aws-amplify-react-native": "^7.0.8",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.71.10",
     "react-native-get-random-values": "^1.11.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-pager-view": "^6.3.1",
+    "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.2.0",
